--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
         <div class="col-md-9  col-lg-9 col-sm-12 column">
             <div class="row clearfix">
                 <!--                栏目1-->
-                <div id="channel-1" class="col-md-6  col-lg-6 col-sm-6 column ">
+                <div id="channel-1" class="col-md-6  col-lg-6 col-sm-6 column channel-box">
                     <p class="Channel-title"><span class="glyphicon glyphicon-list-alt">&ensp;</span> 栏目1</p>
                     <ul class="nav nav-tabs child-channel">
                         <li class="test active"><a target='_blank' href="#">子栏目1</a></li>
@@ -469,7 +469,7 @@
                     </ul>
                 </div>
                 <!--                栏目2-->
-                <div id="channel-2" class="col-md-6 col-lg-6 col-sm-6 column ">
+                <div id="channel-2" class="col-md-6 col-lg-6 col-sm-6 column channel-box">
                     <p class="Channel-title"><span class="glyphicon glyphicon-list-alt">&ensp;</span>栏目2</p>
                     <ul class="nav nav-tabs child-channel">
                         <li class="active"><a href="#">子栏目1</a></li>
@@ -483,7 +483,7 @@
             </div>
             <div class="row clearfix">
                 <!--            栏目3-->
-                <div id="channel-3" class="col-md-6  col-lg-6 col-sm-6 column ">
+                <div id="channel-3" class="col-md-6  col-lg-6 col-sm-6 column channel-box">
                     <p class="Channel-title"><span class="glyphicon glyphicon-list-alt">&ensp;</span>栏目3</p>
                     <ul class="nav nav-tabs child-channel">
                         <li class="active"><a href="#">子栏目1</a></li>
@@ -494,7 +494,7 @@
                     </ul>
                 </div>
                 <!--            栏目4-->
-                <div id="channel-4" class="col-md-6 col-lg-6 col-sm-6  column ">
+                <div id="channel-4" class="col-md-6 col-lg-6 col-sm-6  column channel-box">
                     <p class="Channel-title"><span class="glyphicon glyphicon-list-alt">&ensp;</span>栏目4</p>
                     <ul class="nav nav-tabs child-channel">
                         <li class="active"><a href="#">子栏目1</a></li>
@@ -508,7 +508,7 @@
             </div>
             <div class="row clearfix">
                 <!--                        栏目5-->
-                <div id="channel-5" class="col-md-6  col-lg-6 col-sm-6 column ">
+                <div id="channel-5" class="col-md-6  col-lg-6 col-sm-6 column channel-box">
 
                     <p class="Channel-title"><span class="glyphicon glyphicon-list-alt">&ensp;</span>栏目5</p>
                     <ul class="nav nav-tabs child-channel">
@@ -521,7 +521,7 @@
                     </ul>
                 </div>
                 <!--                栏目6-->
-                <div id="channel-6" class="col-md-6 col-lg-6 col-sm-6 column">
+                <div id="channel-6" class="col-md-6 col-lg-6 col-sm-6 column channel-box">
                     <p class="Channel-title"><span class="glyphicon glyphicon-list-alt">&ensp;</span>栏目6</p>
                     <ul class="nav nav-tabs child-channel">
                         <li class="active"><a href="#">子栏目1</a></li>
