--- a/test.html
+++ b/test.html
@@ -1,47 +1,54 @@
-<form action="todo.php" method="post">
-  <div class="container">
-    <label for="userid"><b>用户名</b></label>
-    <input type="text" placeholder="输入用户名" name="uname" required>
+<!doctype html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <title>jQuery UI 滑块（Slider） - 颜色选择器</title>
+    <link rel="stylesheet" href="css/jquery-ui.min.css">
+    <script src="/js/jquery.min.1.9.1.js"></script>
+    <script src="/js/jquery-ui.min.js"></script>
+    <style>
+        #red, #green, #blue {
+            float: left;
+            clear: left;
+            width: 300px;
+            margin: 15px;
+        }
+        #green .ui-slider-range { background: #8ae234; }
+        #green .ui-slider-handle { border-color: #8ae234; }
 
-    <label for="pwd"><b>密码</b></label>
-    <input type="password" placeholder="输入密码" name="psw" required>
+    </style>
+    <script>
 
-    <button type="submit">登录</button>
-  </div>
+        function refreshSwatch() {
+            document.getElementsByTagName('body')[0].style.zoom = window.outerWidth / 153600 * $("#green").slider("value");
+        }
+        $(function() {
+            $( " #green" ).slider({
+                orientation: "horizontal",
+                range: "min",
+                max: 400,
+                min:50,
+                value: 1,
+                slide: refreshSwatch,
+                change: refreshSwatch
+            });
+            $( "#green" ).slider( "value", 100 );
+        });
+    </script>
+</head>
+<body class="ui-widget-content" style="border:0;">
+
+<p class="ui-state-default ui-corner-all ui-helper-clearfix" style="padding:4px;">
+    <span class="ui-icon ui-icon-pencil" style="float:left; margin:-2px 5px 0 0;"></span>
+    简单的颜色选择器
+</p>
+
+
+<div id="green"></div>
 
 
 
 
-<!-- <marquee style="width:600px;color:#0000ff;height:53px border="0" align="middle" scrolldelay="120">新版内网信息平台上线运行！在使用过程中如有任何困难或建议，请及时向统计信信科反馈！谢谢！</marquee> -->
-            <div class="header_top_user">
-              <span id="time" class="time">
-                <!-- S 用户登录 -->
-                <div id="_userlogin">
-                  <form name="userlogin" action="{dede:global.cfg_memberurl/}/index_do.php" method="POST">
-                    <input type="hidden" name="fmdo" value="login" />
-                    <input type="hidden" name="dopost" value="login" />
-                    <input type="hidden" name="keeptime" value="604800" />
-                    <span>用户名:</span>
-                    <input type="text" name="userid" size="10" class="ipt-txt" />
-                    <span>密码:</span>
-                    <input type="password" name="pwd" size="10" class="ipt-txt" />
-                    <!-- {dede:php}
-                      if(preg_match("#2#", $safe_gdopen)){
-                      echo '
-                      <span>验证码:</span>
-                      <input type="text" name="vdcode" size="8" class="ipt-txt" />
-                      <img id="vdimgck" align="absmiddle" style="cursor:pointer;margin-left:0px;text-transform:uppercase;" alt="看不清？点击更换" src="'.$cfg_cmspath.'/include/vdimgck.php"/>';}
-                    {/dede:php}  注意：若后台的其他选项中禁用前台使用php标签，则本段代码不执行，可用JS方式代替-->
-                    <script type="text/javascript">
-                      var verify = ','+'{dede:global.safe_gdopen/}'+',';
-                      if(verify.indexOf(',2,') >= 0){
-                        var str = '<div class="fb"><span>验证码:</span>';
-                        str += '<input type="text" name="vdcode" size="8" class="ipt-txt" />';
-                        str += '<img id="vdimgck" align="absmiddle" onClick="this.src=this.src+\'?\'" style="cursor:pointer;margin-left:0px;text-transform:uppercase;" alt="看不清？点击更换" src="{dede:global.cfg_cmspath/}/include/vdimgck.php"/></div>';
-                        document.write(str);
-                      }
-                    </script>
-                    <button type="submit" class="btn-1">登录</button>
-                  </form>
-                </div>
-                <script type="text/javascript">CheckLogin();</script>
+
+</body>
+</html>
