--- a/new_index.html
+++ b/new_index.html
@@ -238,7 +238,7 @@
                     ]
                 },
                 {
-                    obj:$('#channel-9'), name:"学习教育", href:"#", sub:[
+                    obj:$('#channel-9'), name:"教育培训", href:"#", sub:[
                         {name:"", href:"", artists:sub_2_1},
                     ]
                 },
