--- a/new_index.html
+++ b/new_index.html
@@ -227,36 +227,36 @@
                         {name:"消费者权益保护", href:"", artists:sub_2_3},
                     ]
                 },
+
                 {
-                    obj:$('#channel-7'), name:"监管阵地", href:"#", sub:[
+                    obj:$('#channel-7'), name:"数据统计", href:"#", sub:[
                         {name:"", href:"", artists:sub_2_1},
                     ]
                 },
                 {
-                    obj:$('#channel-8'), name:"法律法规", href:"#", sub:[
+                    obj:$('#channel-8'), name:"学习培训", href:"#", sub:[
                         {name:"", href:"", artists:sub_2_1},
                     ]
                 },
                 {
-                    obj:$('#channel-9'), name:"教育培训", href:"#", sub:[
+                    obj:$('#channel-9'), name:"群团工作", href:"#", sub:[
                         {name:"", href:"", artists:sub_2_1},
                     ]
                 },
                 {
-                    obj:$('#channel-10'), name:"保密教育", href:"#", sub:[
+                    obj:$('#channel-10'), name:"法律法规", href:"#", sub:[
                         {name:"", href:"", artists:sub_2_1},
                     ]
                 },
                 {
-                    obj:$('#channel-11'), name:"群团工作", href:"#", sub:[
+                    obj:$('#channel-11'), name:"宣传园地", href:"#", sub:[
+                        {name:"", href:"", artists:sub_2_1},
+                    ]
+                },           {
+                    obj:$('#channel-12'), name:"保密教育", href:"#", sub:[
                         {name:"", href:"", artists:sub_2_1},
                     ]
                 },
-                // {
-                //     obj:$('#channel-12'), name:"群团工作", href:"#", sub:[
-                //         {name:"", href:"", artists:sub_2_1},
-                //     ]
-                // },
             ]
             return channels_contents
         }
@@ -430,26 +430,6 @@
                 </div>
             </div>
             <br>
-            <div class="row clearfix side-title" >
-                <div  class="col-md-12 ">
-                    <p class="text-left">政务通报</p>
-                </div>
-            </div>
-            <div class="row clearfix ">
-                <div class="col-md-12 col-lg-12">
-                    <div class="scroll">
-                        <ul class="list">
-                            <li><a href="#" target="_blank">通报1</a></li>
-                            <li><a href="#" target="_blank">通报2</a></li>
-                            <li><a href="#" target="_blank">通报3</a></li>
-                            <li><a href="#" target="_blank">通报4</a></li>
-                            <li><a href="#" target="_blank">通报5</a></li>
-                            <li><a href="#" target="_blank">通报6</a></li>
-                            <li><a href="#" target="_blank">通报7</a></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
         </div>
         <!--        文章列表-->
         <div class="col-md-10  col-lg-10 col-sm-12 column">
@@ -550,7 +530,7 @@
             </div>
 
 
-            <div id="channel-6" class="col-md-8  col-lg-8 col-sm-8 column channel_box">
+            <div id="channel-6" class="col-md-12  col-lg-12 col-sm-12 column channel_box">
                 <ul class="nav nav-tabs child-channel ">
                     <li class=" active"><a target='_blank' href="#">子栏目1</a></li>
                     <li class=""><a target='_blank' href="#">子栏目2</a></li>
