--- a/new_index.html
+++ b/new_index.html
@@ -646,12 +646,13 @@
                 <ul class="list-group">
                 </ul>
             </div>
-<!--            <div id="channel-12" class="col-md-4 col-lg-4 col-sm-6 column channel_box">-->
-<!--                 <a href="#"><p class="Channel-title"><span class="glyphicon glyphicon-list-alt">&ensp;</span>
-                            栏目1</p></a>-->
-<!--                <ul class="list-group">-->
-<!--                </ul>-->
-<!--            </div>-->
+            <div id="channel-12" class="col-md-4 col-lg-4 col-sm-6 column channel_box">
+                <a href="#"><p class="Channel-title"><span class="glyphicon glyphicon-list-alt">&ensp;</span>
+                    栏目1</p></a>
+                <ul class="list-group">
+                </ul>
+            </div>
+
         </div>
     </div>
     <!--    foot_img_box-->
