--- a/new_index.html
+++ b/new_index.html
@@ -114,7 +114,7 @@
                     sub:[{name:"sub1", url:"#"}, {name:"sub2", url:"#"}, {name:"sub3", url:"#"}]
                 },
                 {
-                    name:"党务政务公开",
+                    name:"我为群众办实事",
                     url:"https://baidu.com",
                     sub:[{name:"sub1", url:"#"}, {name:"sub2", url:"#"}, {name:"sub3", url:"#"}]
                 },
@@ -316,7 +316,9 @@
 
         $(document).ready(function () {
             if (window.outerWidth > 1536) {
-                document.getElementsByTagName('body')[0].style.zoom = window.outerWidth / 1536
+                if(window.outerWidth / 1536>1){
+                    document.getElementsByTagName('body')[0].style.zoom = window.outerWidth / 1536;
+                }
             }
             setObjAttrs();
             bind_carousel();
@@ -416,7 +418,7 @@
         <!--        文章列表-->
         <div class="col-md-10  col-lg-10 col-sm-12 column">
             <!--                栏目1 领导活动-->
-            <div class="col-md-8  col-lg-8 col-sm-12 column channel_box">
+            <div class="col-md-12  col-lg-12 col-sm-12 column channel_box">
                 <div class="row clearfix">
                     <!--    领导动态轮播-->
                     <div class="col-lg-6 col-md-6 col-sm-6 hidden-xs ">
@@ -434,7 +436,7 @@
                                 <div class="item active">
                                     <img isLoad="false" class="img-rounded CarouselImg" src="#" alt="" href="#">
                                     <div class="carousel-caption">
-                                        <h5"></h5>
+                                        <h5></h5>
                                     </div>
                                 </div>
                                 <div class="item">
@@ -471,26 +473,18 @@
 
                         </div>
                     </div>
-                    <div id="channel-1" class="col-lg-6 col-md-6 col-sm-6 channel-box">
-                        <a href="#"><p class="Channel-title"><span class="glyphicon glyphicon-list-alt">&ensp;</span>
-                            栏目1</p></a>
+                    <div id="channel-1" class="col-lg-6 col-md-6 col-sm-6 border1 ">
+                        <p class="Channel-title"><span class="glyphicon glyphicon-th-list"></span> 领导活动</p>
                         <ul class="list-group">
                         </ul>
                     </div>
-
                 </div>
-
             </div>
 
             <!--                栏目2-->
-            <div id="channel-2" class="col-md-4 col-lg-4 col-sm-6 column channel_box">
-                <a href="#"><p class="Channel-title"><span class="glyphicon glyphicon-list-alt">&ensp;</span>
-                    栏目1</p></a>
-                <ul class="list-group">
-                </ul>
-            </div>
+
             <div class="row clearfix">
-                <div class="col-lg-12 col-md-12 " style="position: relative;margin-top: 25px ;padding-bottom: 30px">
+                <div class="col-lg-12 col-md-12 hidden-sm" style="position: relative;margin-top: 25px ;padding-bottom: 30px">
                     <!--                    <a id="body_ad1">-->
                     <!--                        <img id="body_img_ad1" class="img-rounded shadow" style="padding: 0" width="100%" alt="" src="">-->
                     <!--                    </a>-->
@@ -498,6 +492,12 @@
                         <h2 class="text-center">专题1：党建高质量发展</h2>
                     </div>
                 </div>
+            </div>
+            <div id="channel-2" class="col-md-4 col-lg-4 col-sm-6 column channel_box">
+                <a href="#"><p class="Channel-title"><span class="glyphicon glyphicon-list-alt">&ensp;</span>
+                    栏目1</p></a>
+                <ul class="list-group">
+                </ul>
             </div>
             <!--                栏目3-->
             <div id="channel-3" class="col-md-4 col-lg-4 col-sm-6 column channel_box">
@@ -507,12 +507,12 @@
                 </ul>
             </div>
             <!--                栏目4-->
-            <div id="channel-4" class="col-md-4 col-lg-4 col-sm-6 column channel_box">
-                <a href="#"><p class="Channel-title"><span class="glyphicon glyphicon-list-alt">&ensp;</span>
-                    栏目1</p></a>
-                <ul class="list-group">
-                </ul>
-            </div>
+<!--            <div id="channel-4" class="col-md-4 col-lg-4 col-sm-6 column channel_box">-->
+<!--                <a href="#"><p class="Channel-title"><span class="glyphicon glyphicon-list-alt">&ensp;</span>-->
+<!--                    栏目1</p></a>-->
+<!--                <ul class="list-group">-->
+<!--                </ul>-->
+<!--            </div>-->
             <div id="channel-5" class="col-md-4 col-lg-4 col-sm-6 column channel_box">
                 <a href="#"><p class="Channel-title"><span class="glyphicon glyphicon-list-alt">&ensp;</span>
                     栏目1</p></a>
@@ -521,7 +521,7 @@
             </div>
 
             <div class="row clearfix">
-                <div class="col-lg-12 col-md-12 " style="position: relative;margin-top: 25px ;padding-bottom: 30px">
+                <div class="col-lg-12 col-md-12  hidden-sm" style="position: relative;margin-top: 25px ;padding-bottom: 30px">
                     <!--                    <a id="body_ad1">-->
                     <!--                        <img id="body_img_ad1" class="img-rounded shadow" style="padding: 0" width="100%" alt="" src="">-->
                     <!--                    </a>-->
