--- a/new_index.html
+++ b/new_index.html
@@ -98,11 +98,7 @@
                     url:"https://baidu.com",
                     sub:[]
                 },
-                {
-                    name:"公告通知",
-                    url:"https://baidu.com",
-                    sub:[]
-                },
+
                 {
                     name:"党的建设",
                     url:"https://baidu.com",
@@ -114,10 +110,26 @@
                     sub:[{name:"sub1", url:"#"}, {name:"sub2", url:"#"}, {name:"sub3", url:"#"}]
                 },
                 {
+                    name:"金融服务",
+                    url:"https://baidu.com",
+                    sub:[]
+                },
+                {
+                    name:"风险管理",
+                    url:"https://baidu.com",
+                    sub:[]
+                },
+                {
+                    name:"消费者权益保护",
+                    url:"https://baidu.com",
+                    sub:[]
+                },
+                {
                     name:"我为群众办实事",
                     url:"https://baidu.com",
                     sub:[{name:"sub1", url:"#"}, {name:"sub2", url:"#"}, {name:"sub3", url:"#"}]
                 },
+
             ];
             return nav_contents
         }
@@ -542,7 +554,14 @@
 
                 </ul>
             </div>
-
+            <div class="col-lg-12 col-md-12  hidden-sm" style="position: relative;margin-top: 25px ;padding-bottom: 30px">
+                <!--                    <a id="body_ad1">-->
+                <!--                        <img id="body_img_ad1" class="img-rounded shadow" style="padding: 0" width="100%" alt="" src="">-->
+                <!--                    </a>-->
+                <div style="width: 100%;height: 95px;background: green">
+                    <h2 class="text-center">专题3：作风大提升专栏</h2>
+                </div>
+            </div>
             <div id="channel-7" class="col-md-4 col-lg-4 col-sm-6 column channel_box">
                 <a href="#"><p class="Channel-title"><span class="glyphicon glyphicon-list-alt">&ensp;</span>
                     栏目1</p></a>
